name:                distribution-monad
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/...
license:             BSD3
license-file:        LICENSE
author:              Dario Sterzi
maintainer:          sterzi.dario@gmail.com
copyright:           2017 Dario Sterzi
category:            Statistics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.9.1.0
                     , containers
  default-language:    Haskell2010


--executable distribution-monad-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , containers
--                     , distribution-monad
--  default-language:    Haskell2010

--test-suite distribution-monad-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , distribution-monad
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/...
